--- a/NurseryWebApp.csproj
+++ b/NurseryWebApp.csproj
@@ -100,6 +100,7 @@
     <Content Include="Content\Images\favicon.ico" />
     <Content Include="Content\Images\logo.svg" />
     <Content Include="Content\Site.css" />
+    <Content Include="DBScripts\NurseryDB.sql" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config" />
